--- a/EntityFrameworkCore.L.Extension/EntityFrameworkCore.L.Extension.csproj
+++ b/EntityFrameworkCore.L.Extension/EntityFrameworkCore.L.Extension.csproj
@@ -1,7 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Extension\EntityFrameworkCoreExtensionMapping.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Mapping\EntityFrameworkCoreExtensionMapping.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+  </ItemGroup>
 
 </Project>
