--- a/EntityFrameworkCore.L.Extension/EntityFrameworkCore.L.Extension.csproj
+++ b/EntityFrameworkCore.L.Extension/EntityFrameworkCore.L.Extension.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>EntityFrameworkCore.L.Extension</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>CC Liu</Authors>
+    <Company>CC Liu</Company>
   </PropertyGroup>
 
   <ItemGroup>
