--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - uses: actions/labeler@v2
       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        repo-token: "${{ secrets.b5bc8b95d103a6431f855512cd7a21f04e0b5f69 }}"
